k8s/audiobookshelf/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: audiobookshelf
  labels:
    app: audiobookshelf
  namespace: audiobookshelf
spec:
  replicas: 1
  selector:
    matchLabels:
      app: audiobookshelf
  template:
    metadata:
      labels:
        app: audiobookshelf
    spec:
      containers:
        - name: audiobookshelf
          image: ghcr.io/advplyr/audiobookshelf:2.28.0
          ports:
            - containerPort: 80
          volumeMounts:
            - name: media-volume
              mountPath: /audiobooks
              readOnly: true
            - name: config-volume
              mountPath: /config
            - name: metadata-volume
              mountPath: /metadata
      volumes:
        - name: media-volume
          persistentVolumeClaim:
            claimName: audiobookshelf-media-pvc
        - name: config-volume
          persistentVolumeClaim:
            claimName: audiobookshelf-config-pvc
        - name: metadata-volume
          persistentVolumeClaim:
            claimName: audiobookshelf-metadata-pvc
