k8s/audiobookshelf/service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: audiobookshelf
  name: audiobookshelf
  labels:
    app: audiobookshelf
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
  selector:
    app: audiobookshelf
