k8s/audiobookshelf/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: audiobookshelf
  namespace: audiobookshelf
  annotations:
    kubernetes.io/ingress.ingressClassName: "traefik"
    traefik.ingress.kubernetes.io/router.entrypoints: web-private
spec:
  rules:
    - host: audio.twop.ch
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: audiobookshelf
                port:
                  name: service-port
